--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -236,7 +236,7 @@ application:
       #插件启动项
       isStart: true
       # 延时判断
-      # 默认设置为三倍，即未开放端口响应时间是开放端口响应时间三倍以上时判定为存在漏洞。这里会进行多次及多端口校验，防止网络问题
+      # 默认设置为三倍，即未开放端口响应时间是开放端口响应时间三倍以上时判定为存在漏洞。这里会进行二次校验，防止网络问题
       multiple: 3
       # 探测端口
       port:
